<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="@dimen/binary_line_h"        android:background="@color/main_lf_bg">        <TextView            android:id="@+id/title_bar_left_text"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignParentLeft="true"            android:layout_centerVertical="true"            android:layout_marginLeft="@dimen/margin_10dip"            android:drawableLeft="@drawable/back"            android:drawablePadding="@dimen/radius_4dip"            android:gravity="center"            android:text="@string/back"            android:textColor="@color/white"            android:textSize="@dimen/common_text_22" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerInParent="true"            android:text="@string/personal_center"            android:textColor="@color/white"            android:textSize="@dimen/common_text_24" />        <TextView            android:id="@+id/title_bar_right_text"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:layout_marginRight="@dimen/margin_10dip"            android:textColor="@color/white"            android:textSize="@dimen/common_text_22" />    </RelativeLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:orientation="horizontal"        android:weightSum="5.8">        <LinearLayout            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1.2"            android:orientation="vertical">            <RelativeLayout                android:layout_width="match_parent"                android:layout_height="@dimen/personal_title_h"                android:background="@color/info_bg_username"                android:gravity="center"                android:orientation="vertical">                <ImageView                    android:id="@+id/user_photo"                    android:layout_width="@dimen/newlist_height"                    android:layout_height="@dimen/newlist_height"                    android:layout_centerHorizontal="true"                    android:layout_marginTop="@dimen/margin_10dip"                    android:src="@drawable/user_photo" />                <TextView                    android:id="@+id/user_name"                    style="@style/TextMarquee"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_below="@id/user_photo"                    android:text="@string/about_us"                    android:layout_centerHorizontal="true"                    android:textColor="@color/white"                    android:textSize="@dimen/common_text_24" />                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="@dimen/hisrecord_height_answer"                    android:layout_alignParentBottom="true"                    android:background="@color/info_bg_usergroup"                    android:gravity="center"                    android:orientation="horizontal">                    <TextView                        android:id="@+id/txt_user_group_person"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:drawableLeft="@drawable/user_group"                        android:drawablePadding="@dimen/margin_edge"                        android:text="@string/about_us"                        android:textColor="@color/white"                        android:textSize="@dimen/text_size_18" />                    <TextView                        android:id="@+id/user_age_ads"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_gravity="center"                        android:layout_marginLeft="@dimen/margin_10dip"                        android:drawableLeft="@drawable/user_level"                        android:drawablePadding="@dimen/margin_edge"                        android:text="@string/person_level"                        android:textColor="@color/white"                        android:textSize="@dimen/text_size_18" />                </LinearLayout>            </RelativeLayout>            <ScrollView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:background="@drawable/personal_aty_left_bottom_bg">                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_margin="1dp"                    android:gravity="center"                    android:orientation="vertical">                    <TextView                        android:id="@+id/personal_info"                        style="@style/PersonalItemText"                        android:drawableLeft="@drawable/personal_info_bg"                        android:text="@string/personal_info" />                    <include layout="@layout/personal_view_divide_line" />                    <TextView                        android:id="@+id/personal_authentication"                        style="@style/PersonalItemText"                        android:drawableLeft="@drawable/personal_authentication_bg"                        android:text="@string/personal_authentication" />                    <include layout="@layout/personal_view_divide_line" />                    <TextView                        android:id="@+id/personal_record"                        style="@style/PersonalItemText"                        android:drawableLeft="@drawable/personal_record_bg"                        android:text="@string/personal_record" />                    <include layout="@layout/personal_view_divide_line" />                    <TextView                        android:id="@+id/personal_favorite"                        style="@style/PersonalItemText"                        android:drawableLeft="@drawable/personal_favorite_bg"                        android:text="@string/personal_favorite" />                    <include layout="@layout/personal_view_divide_line" />                    <TextView                        android:id="@+id/personal_wallet"                        style="@style/PersonalItemText"                        android:drawableLeft="@drawable/personal_wallet_bg"                        android:text="@string/personal_wallet" />                    <include layout="@layout/personal_view_divide_line" />                    <TextView                        android:id="@+id/personal_msg"                        style="@style/PersonalItemText"                        android:drawableLeft="@drawable/personal_msg_bg"                        android:text="@string/personal_msg" />                    <include layout="@layout/personal_view_divide_line" />                    <TextView                        android:id="@+id/personal_setting"                        style="@style/PersonalItemText"                        android:drawableLeft="@drawable/personal_setting_bg"                        android:text="@string/personal_setting" />                    <include layout="@layout/personal_view_divide_line" />                </LinearLayout>            </ScrollView>        </LinearLayout>        <FrameLayout            android:id="@+id/personal_frg_container"            android:layout_width="0dip"            android:layout_height="match_parent"            android:layout_weight="4.6" />    </LinearLayout></LinearLayout>